--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="card-tooltip" id="tooltip-cycle-progress">
                         <div class="tooltip-content">
                             <h4>Cycle Progress</h4>
-                            <p>Tezos operates in cycles of ~2.8 days (10,800 blocks). Staking rewards and baker rights are calculated per cycle.</p>
+                            <p>Tezos operates in cycles of ~18 hours (10,800 blocks). Staking rewards and baker rights are calculated per cycle.</p>
                             <a href="https://opentezos.com/tezos-basics/economics/" target="_blank" rel="noopener">Learn more →</a>
                         </div>
                     </div>
@@ -784,7 +784,7 @@
                     <li><strong>Transactions</strong>: XTZ transfers, delegations, reveals</li>
                     <li><strong>Contract calls</strong>: DeFi, NFTs, dApps interactions</li>
                     <li><strong>Low fees</strong>: Typically under $0.01 per transaction</li>
-                    <li><strong>Fast blocks</strong>: ~8 second block times</li>
+                    <li><strong>Fast blocks</strong>: ~6 second block times</li>
                 </ul>
                 <div class="modal-links">
                     <a href="https://tzkt.io" target="_blank" rel="noopener">TzKT Block Explorer</a>
