--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-<body data-theme="default">
+<body data-theme="matrix">
     <!-- Header with controls -->
     <header class="header">
         <div class="header-content">
