Start baking banner

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body data-theme="matrix">
+    <!-- Corner ribbon banner -->
+    <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="corner-ribbon">
+        🍞 Start Baking!
+    </a>
+
     <!-- Header with controls -->
     <header class="header">
         <div class="header-content">
