Separate normal from ultra mode

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <button id="theme-toggle" class="glass-button" aria-label="Switch to matrix theme" title="Theme: default">
                     <span class="theme-icon">🎨</span>
                 </button>
+                <button id="ultra-toggle" class="glass-button" aria-label="Toggle Ultra mode" title="Ultra mode: OFF">
+                    <span class="ultra-icon">⚡</span>
+                </button>
             </div>
         </div>
     </header>
