--- a/index.html
+++ b/index.html
@@ -41,19 +41,24 @@
     <!-- Header with controls -->
     <header class="header">
         <div class="header-content">
-            <h1 class="title">Tezos Systems</h1>
+            <div class="header-left">
+                <h1 class="title">Tezos Systems</h1>
+                <button id="refresh-btn" class="glass-button" aria-label="Refresh data now" title="Refresh now">
+                    <span class="refresh-icon">↻</span>
+                </button>
+            </div>
             <div class="controls">
                 <button id="history-btn" class="glass-button" aria-label="View historical data" title="Historical data">
                     <span>📊</span>
-                </button>
-                <button id="refresh-btn" class="glass-button" aria-label="Refresh data now" title="Refresh now">
-                    <span class="refresh-icon">↻</span>
                 </button>
                 <button id="theme-toggle" class="glass-button" aria-label="Switch to matrix theme" title="Theme: default">
                     <span class="theme-icon">🎨</span>
                 </button>
                 <button id="ultra-toggle" class="glass-button" aria-label="Toggle Ultra mode" title="Ultra mode: OFF">
                     <span class="ultra-icon">⚡</span>
+                </button>
+                <button id="share-btn" class="glass-button" aria-label="Share snapshot" title="Share snapshot">
+                    <span class="share-icon">📸</span>
                 </button>
             </div>
         </div>
