Protocol history added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,41 @@
         </div>
     </header>
 
+    <!-- Upgrade Clock -->
+    <section class="upgrade-clock" id="upgrade-clock">
+        <div class="upgrade-clock-content">
+            <div class="upgrade-main">
+                <div class="upgrade-count">
+                    <span class="upgrade-number" id="upgrade-count">--</span>
+                    <span class="upgrade-label">Upgrades</span>
+                </div>
+                <div class="upgrade-info">
+                    <div class="upgrade-current">
+                        <span class="current-label">Current Protocol</span>
+                        <span class="current-name" id="current-protocol">Loading...</span>
+                    </div>
+                    <div class="upgrade-highlight" id="upgrade-highlight"></div>
+                </div>
+                <div class="upgrade-badges">
+                    <div class="upgrade-badge">
+                        <span class="badge-text">Zero Forks</span>
+                        <span class="badge-subtext">Self-amending blockchain</span>
+                    </div>
+                    <div class="upgrade-badge">
+                        <span class="badge-text" id="days-live">—</span>
+                        <span class="badge-subtext">Days live • 0 outages</span>
+                    </div>
+                </div>
+            </div>
+            <div class="upgrade-status" id="upgrade-status">
+                <!-- Voting status will be inserted here -->
+            </div>
+            <div class="upgrade-timeline" id="upgrade-timeline">
+                <!-- Timeline will be inserted here -->
+            </div>
+        </div>
+    </section>
+
     <!-- Main content -->
     <main class="main-content">
         <!-- Consensus Section -->
