% change on trendlines

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div class="stat-value" id="total-bakers-front">
                                 <span class="loading">...</span>
                             </div>
-                            <div class="sparkline-container"><canvas id="bakers-sparkline" class="sparkline-chart"></canvas></div>
+                            <div class="sparkline-container"><canvas id="bakers-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="bakers-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Total Bakers</h2>
@@ -165,7 +165,7 @@
                             <div class="stat-value stat-value-dual" id="tz4-adoption-front">
                                 <span class="loading">...</span>
                             </div>
-                            <div class="sparkline-container"><canvas id="tz4-sparkline" class="sparkline-chart"></canvas></div>
+                            <div class="sparkline-container"><canvas id="tz4-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="tz4-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">tz4 Adoption</h2>
@@ -243,7 +243,7 @@
                             <div class="stat-value" id="issuance-rate-front">
                                 <span class="loading">...</span>
                             </div>
-                            <div class="sparkline-container"><canvas id="issuance-sparkline" class="sparkline-chart"></canvas></div>
+                            <div class="sparkline-container"><canvas id="issuance-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="issuance-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Issuance Rate</h2>
@@ -307,7 +307,7 @@
                             <div class="stat-value" id="staking-ratio-front">
                                 <span class="loading">...</span>
                             </div>
-                            <div class="sparkline-container"><canvas id="staking-sparkline" class="sparkline-chart"></canvas></div>
+                            <div class="sparkline-container"><canvas id="staking-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="staking-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Staking Ratio</h2>
@@ -371,7 +371,7 @@
                             <div class="stat-value" id="total-supply-front">
                                 <span class="loading">...</span>
                             </div>
-                            <div class="sparkline-container"><canvas id="supply-sparkline" class="sparkline-chart"></canvas></div>
+                            <div class="sparkline-container"><canvas id="supply-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="supply-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Total Supply</h2>
