--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <button id="whale-toggle" class="glass-button" aria-label="Toggle Mini Whale feed" title="Mini Whale: OFF">
                     <span class="whale-toggle-icon">🐬</span>
                 </button>
+                <button id="giants-toggle" class="glass-button" aria-label="Toggle Sleeping Giants" title="Sleeping Giants: OFF">
+                    <span class="giants-toggle-icon">😴</span>
+                </button>
                 <button id="theme-toggle" class="glass-button" aria-label="Switch to matrix theme" title="Theme: default">
                     <span class="theme-icon">🎨</span>
                 </button>
@@ -111,6 +114,33 @@
             </div>
             <div class="whale-feed" id="whale-feed">
                 <!-- Transactions will be inserted here -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Sleeping Giants -->
+    <section class="giants-section" id="giants-section">
+        <div class="giants-section-inner">
+            <div class="giants-header">
+                <div class="giants-title-row">
+                    <h2 class="giants-title">😴 Sleeping Giants</h2>
+                    <span class="giants-subtitle">Dormant whales with 1M+ ꜩ</span>
+                </div>
+                <div class="giants-stats" id="giants-stats">
+                    <!-- Stats will be inserted here -->
+                </div>
+            </div>
+            <div id="awakening-alerts" class="awakening-alerts">
+                <!-- Awakening alerts appear here -->
+            </div>
+            <div class="giants-grid" id="giants-grid">
+                <!-- Giant cards will be inserted here -->
+            </div>
+            <div class="awakenings-history">
+                <h3 class="awakenings-history-title">📜 Recent Awakenings</h3>
+                <div id="awakenings-log" class="awakenings-log">
+                    <!-- Awakening history will be inserted here -->
+                </div>
             </div>
         </div>
     </section>
