--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body data-theme="matrix">
     <!-- Corner ribbon banner -->
     <a href="https://docs.tez.capital" target="_blank" rel="noopener" class="corner-ribbon">
-        🍞 Start Baking!
+        🍞 Start Baking
     </a>
 
     <!-- Header with controls -->
